--- a/worksheet 3A/UntitledRMD.Rmd
+++ b/worksheet 3A/UntitledRMD.Rmd
@@ -14,3 +14,8 @@ b. Produce a vector that contains the odd numbered letters.
 letters[seq(1, length(LETTERS), by = 2)] 
 LETTERS[seq(1, length(LETTERS), by = 2)]
 ```
+c.Produce a vector that contains the vowels
+```{r}
+letters[c(1, 5, 9, 15, 21)]
+LETTERS[c(1, 5, 9, 15, 21)]
+```
