--- a/worksheet 3A/RWorksheet_Pauchano#3a.Rmd
+++ b/worksheet 3A/RWorksheet_Pauchano#3a.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 Using Vectors
 1. There is a built-in vector LETTERS contains the uppercase letters of the alphabet and letters which contains the lowercase letters of the alphabet.
 ```{r}
@@ -95,7 +100,37 @@ rownames(mmtrx) <- c("isa", "dalawa", "tatlo")
 colnames(mmtrx) <- c("uno", "dos", "tres", "quatro")
 mmtrx
 ```
-
+h. From the original matrix you have created in a, reshape the matrix by assigning a new dimension with dim(). New dimensions should have 2 columns and 6 rows. What will be the R code and its output?
 ```{r}
+rmtrx <- matrix(mtrx1, nrow = 6, ncol = 2)
+rmtrx
+```
+Using Arrays
+• Array can have more than two dimensions by using the array() function and dim()
+to specify the dimensions
+
+3. An array contains 1, 2, 3, 6, 7, 8, 9, 0, 3, 4, 5, 1
+
+a. Create an array for the above numeric values. Each values will be repeated twice What will be the R code if you are to create a three-dimensional array with 4 columns and 2 rows. What will be its output?
+```{r}
+values <- c(1, 2, 3, 6, 7, 8, 9, 0, 3, 4, 5, 1)
+
+repvalues <- rep(values, each = 2)
+
+array3d <- array(repvalues, dim = c(2, 4, 3))
+array3d
+```
+b. How many dimensions do your array have?
+```{r}
+dimensions <- dim(array3d)
+length(dimensions)
+```
+c. Name the rows as lowercase letters and columns as uppercase letters starting from the A. The array names should be “1st-Dimensional Array”, “2nd-Dimensional Array”, and “3rd-Dimensional Array”. What will be the R codes and its output?
+```{r}
+rownames(array3d) <- c("a", "b")         
+colnames(array3d) <- c("A", "B", "C", "D") 
+dimnames(array3d) <- list(c("a", "b"), c("A", "B", "C", "D"), c("1st-Dimensional Array", "2nd-Dimensional Array", "3rd-Dimensional Array"))
+
+array3d
 
 ```
