--- a/worksheet#4/RWorksheet_Pauchano#4.Rmd
+++ b/worksheet#4/RWorksheet_Pauchano#4.Rmd
@@ -58,6 +58,7 @@ b. View the dataset. Write the R scripts and its result.
 data <- read.table("import_march.csv", header = TRUE, sep = ",")
 data
 ```
+6. Full Search
 a. Create an R Program that allows the User to randomly select numbers from 1 to 50.
 Then display the chosen number. If the number is beyond the range of the selected choice,
 it will have to display a string “The number selected is beyond the range of 1 to 50”. If
@@ -87,6 +88,7 @@ exhaustive_search()
 
 
 ```
+7. Change
 a. Write a function that prints the minimum number of bills that must be paid, given the
 price of the snack.
 Input: Price of snack (a random number divisible by 50) Output: Minimum number of bills
@@ -126,17 +128,54 @@ grade4 <- c(100, 90, 85, 90)
 grades <- data.frame(Name = name, Grade1 = grade1, Grade2 = grade2, Grade4 = grade4)
 grades
 
-```
-b. Without using the rowMean function, output the average score of students whose average
-math score over 90 points during the semester. write R code and its output.
-```{r}
 
+```
+b. Without using the rowMean function, output the average score of students whose average math score over 90 points during the semester. write R code and its output.
+```{r}
+average_scores <- (grades$Grade1 + grades$Grade2 + grades$Grade3 + grades$Grade4) / 4
+students_above_90 <- grades[average_scores > 90, ]
+
+if (nrow(students_above_90) > 0) {
+    students_above_90_avg <- sum(average_scores[average_scores > 90]) / nrow(students_above_90)
+} else {
+    students_above_90_avg <- NA
+}
+
+students_above_90_avg
 ```
 c. Without using the mean function, output as follows for the tests in which the average
 score was less than 80 out of 4 tests.
 ```{r}
+name <- c("Annie", "Thea", "Steve", "Hanna")
+grade1 <- c(85, 65, 75, 95)
+grade2 <- c(65, 75, 55, 75)
+grade3 <- c(85, 90, 80, 100)
+grade4 <- c(100, 90, 85, 90)
+
+grades <- data.frame(Name = name, Grade1 = grade1, Grade2 = grade2, Grade3 = grade3, Grade4 = grade4)
+
+for (i in 1:nrow(grades)) {
+  test_avg <- (grades[i, 2] + grades[i, 3] + grades[i, 4] + grades[i, 5]) / 4
+  if (test_avg < 80) {
+    cat("Name:", grades$Name[i], "- Average Score:", test_avg, "\n")
+  }
+}
 
 ```
 d. Without using the max function, output as follows for students whose highest score for
 a semester exceeds 90 points.
 ```{r}
+for (i in 1:nrow(grades)) {
+  highest_score <- grades[i, 2]
+  for (j in 3:5) {
+    if (grades[i, j] > highest_score) {
+      highest_score <- grades[i, j]
+    }
+  }
+  if (highest_score > 90) {
+    cat("Name:", grades$Name[i], "- Highest Score:", highest_score, "\n")
+  }
+}
+
+```
+
